refactor: 산책 V1 서비스 계층 수정